##############################################################################
#   Copyright (C) 2019 GSI Helmholtzzentrum für Schwerionenforschung GmbH    #
#   Copyright (C) 2019 Members of R3B Collaboration                          #
#                                                                            #
#             This software is distributed under the terms of the            #
#                 GNU General Public Licence (GPL) version 3,                #
#                    copied verbatim in the file "LICENSE".                  #
#                                                                            #
# In applying this license GSI does not waive the privileges and immunities  #
# granted to it by virtue of its status as an Intergovernmental Organization #
# or submit itself to any jurisdiction.                                      #
##############################################################################

# Load all the libraries for fiber detectors.

add_subdirectory(fi0)
add_subdirectory(fi1a)
add_subdirectory(fi1b)
add_subdirectory(fi2a)
add_subdirectory(fi2b)
add_subdirectory(fi3a)
add_subdirectory(fi3b)
add_subdirectory(fi4)
add_subdirectory(fi5)
add_subdirectory(fi6)
add_subdirectory(fi7)
add_subdirectory(fi8)
add_subdirectory(fi9)
add_subdirectory(fi10)
add_subdirectory(fi11)
add_subdirectory(fi12)
add_subdirectory(fi13)
